# phase-b

./: .gitignore  LICENSE  MIGRATION_MANIFEST.txt  MIGRATION_MAP.md  README.md  new_trial.sh  resume_codex_trial.sh  run_api_trial.sh  run_codex_all_bg.sh  run_codex_trial.sh  run_coding_trial.sh
agent/: CODING_CLI_FALLBACK.md  README.md  __init__.py  cli.py  coding_cli.py  config.py  judge.py  manifests.py  model_api.py  prompting.py  runner.py  workspace.py
agent/manifests/: chapters.toml  codex.toml  crates.toml  defaults.toml
artifacts/: README.md
candidate-template/: Cargo.toml  README.md  SEAMS.md
candidate-template/kernel-alloc/src/: test_support.rs
candidate-template/syscall/src/: syscalls.rs
candidate-template/user/: build.rs
candidate-template/user/src/: heap.rs
candidate-template/xtask/src/: main.rs
oracle-tests/: README.md  TEST_MATRIX.md  install_oracle_tests.sh  run_oracle_tests.sh
spec/: README.md  project.md
spec/specs/ch1/: autogen.yaml
spec/specs/ch2/: autogen.yaml
spec/specs/ch3/: autogen.yaml
spec/specs/ch4/: autogen.yaml
spec/specs/ch5/: autogen.yaml
spec/specs/ch6/: autogen.yaml
spec/specs/ch7/: autogen.yaml
spec/specs/ch8/: autogen.yaml
spec/specs/console/: autogen.yaml
spec/specs/easy-fs-storage/: autogen.yaml
trial-workspaces/: README.md
trial-workspaces/generated-rust-os/task-manage/: Cargo.toml
trial-workspaces/generated-rust-os/task-manage/src/: collections.rs  id.rs  lib.rs  manager.rs  proc_manage.rs  proc_rel.rs  proc_thread_rel.rs  scheduler.rs  tests.rs  thread_manager.rs
(+61 files in other folders)
